--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
         <div class="product-info">
           <h1>{{ product }}</h1>
           <p v-if="onSale">A venda</p>
+          <ul>
+            <li v-for="detail in details">{{ detail }}</li>
+          </ul>
+          
+            <li v-for="size in sizes">{{ size }}</li>
+
+          <div v-for="variant in variants">{{ variant.color }}</div>
           <p v-if="inventory > 10">Em Estoque</p>
           <p v-else-if="inventory <= 10 && inventory > 0">Quase esgotado!</p>
           <p v-else>Fora de Estoque</p>
