--- a/index.html
+++ b/index.html
@@ -14,36 +14,19 @@
   <div id="app">
     <div class="nav-bar"></div>
 
-    <div class="product-display">
-      <div class="product-container">
-        <div class="product-image">
-          <img :src="image">
-        </div>
-        <div class="product-info">
-          <h1>{{ product }}</h1>
-          <div class="cart">Cart({{ cart }})</div>
-          <p v-if="onSale">A venda</p>
-          <ul>
-            <li v-for="detail in details">{{ detail }}</li>
-          </ul>
-
-            <li v-for="size in sizes">{{ size }}</li>
-
-          <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)">{{ variant.color }}</div>
-          <p v-if="inventory > 10">Em Estoque</p>
-          <p v-else-if="inventory <= 10 && inventory > 0">Quase esgotado!</p>
-          <p v-else>Fora de Estoque</p>
-          
-          <button class="button" v-on:click="addToCart">Add to Cart</button>
-          <button class="button" v-on:click="remove">Remove </button>
-
-        </div>
-      </div>
-    </div>
+    <div class="cart">Cart({{ cart.length }})</div>
+    <product-display :premium="premium" @add-to-cart="updateCart" @remove-item="removeItemCart"></product-display>
   </div>
 
+  <!-- Import App -->
   <script src="./main.js"></script>
 
+  <!-- Import Components -->
+  <script src="./components/ProductDisplay.js"></script>
+  <script src="./components/ReviewForm.js"></script>
+  <script src="./components/ReviewList.js"></script>
+
+  <!-- Mount App -->
   <script>
     const mountedApp = app.mount('#app')
   </script>
